--- a/yannik/pages/watchface-numbers.html
+++ b/yannik/pages/watchface-numbers.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>WatchFace Numbers.js</title>
-  
-  <style>
-    body { margin: 0; background: black; }
-    canvas { display: block; }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Watchface Numbers</title>
 
-  <link href="/yannik/script/watchface-numbers.js">
+  <!-- p5.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+
+  <!-- Matter.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+
+  <!-- Dein Watchface-Skript -->
+  <script src="/yannik/script/watchface-numbers.js" defer></script>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: #333;
+    }
+    #thecanvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  </style>
 </head>
 <body>
-
-<canvas></canvas>
-
-
-
+  <div id="thecanvas"></div>
 </body>
 </html>
