--- a/tobi/pages/clockwork2.html
+++ b/tobi/pages/clockwork2.html
@@ -7,32 +7,32 @@
   <meta name="description" content="">
   <meta name="author" content="ByronStar">
 
-  <title>Clockwork</title>
+  <title>Clockwork2</title>
 
   <!-- p5js -->
-  <script src="../libraries/p5.js" type="text/javascript"></script>
-  <script src="../libraries/p5.sound.js" type="text/javascript"></script>
+  <script src="../../libraries/p5.js" type="text/javascript"></script>
+  <script src="../../libraries/p5.sound.js" type="text/javascript"></script>
 
   <!-- matter.js -->
-  <script type="text/javascript" src="../libraries/decomp.min.js"></script>
-  <script type="text/javascript" src="../libraries/pathseg.js"></script>
-  <script type="text/javascript" src="../libraries/matter.js"></script>
+  <script type="text/javascript" src="../../libraries/decomp.min.js"></script>
+  <script type="text/javascript" src="../../libraries/pathseg.js"></script>
+  <script type="text/javascript" src="../../libraries/matter.js"></script>
 
   <!-- Javascript Klassen -->
-  <script type="text/javascript" src="../classes/Mouse.js"></script>
-  <script type="text/javascript" src="../classes/BlockCore.js"></script>
-  <script type="text/javascript" src="../classes/Block.js"></script>
-  <script type="text/javascript" src="../classes/BlocksFromSVG.js"></script>
-  <script type="text/javascript" src="../classes/Ball.js"></script>
-  <script type="text/javascript" src="../classes/Magnet.js"></script>
-  <script type="text/javascript" src="../classes/Parts.js"></script>
-  <script type="text/javascript" src="../classes/Polygon.js"></script>
-  <script type="text/javascript" src="../classes/PolygonFromPoints.js"></script>
-  <script type="text/javascript" src="../classes/Stack.js"></script>
-  <script type="text/javascript" src="../classes/PolygonFromSVG.js"></script>
+  <script type="text/javascript" src="../../classes/Mouse.js"></script>
+  <script type="text/javascript" src="../../classes/BlockCore.js"></script>
+  <script type="text/javascript" src="../../classes/Block.js"></script>
+  <script type="text/javascript" src="../../classes/BlocksFromSVG.js"></script>
+  <script type="text/javascript" src="../../classes/Ball.js"></script>
+  <script type="text/javascript" src="../../classes/Magnet.js"></script>
+  <script type="text/javascript" src="../../classes/Parts.js"></script>
+  <script type="text/javascript" src="../../classes/Polygon.js"></script>
+  <script type="text/javascript" src="../../classes/PolygonFromPoints.js"></script>
+  <script type="text/javascript" src="../../classes/Stack.js"></script>
+  <script type="text/javascript" src="../../classes/PolygonFromSVG.js"></script>
 
   <!-- Javascript Programm in separater Datei -->
-  <script type="text/javascript" src="clockwork2.js" id="homework"></script>
+  <script type="text/javascript" src="../script/clockwork2.js" id="homework"></script>
 
   <style>
     body {
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-  <div id="sprite-background"></div>
+  <!-- <div id="sprite-background"></div> -->
   <div id="thecanvas">
     <canvas id="canvas">
   </div>
