event horizon html title change

--- a/tobi/pages/clockwork5_horizon.html
+++ b/tobi/pages/clockwork5_horizon.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="ByronStar">
 
-  <title>Clockwork2</title>
+  <title>Event Horizon</title>
 
   <!-- p5js -->
   <script src="../../libraries/p5.js" type="text/javascript"></script>
