--- a/tobi/pages/clockwork2v2.html
+++ b/tobi/pages/clockwork2v2.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="ByronStar">
 
-  <title>Wasser</title>
+  <title>Wasser v2</title>
 
   <!-- p5js -->
   <script src="../../libraries/p5.js" type="text/javascript"></script>
@@ -32,7 +32,7 @@
   <script type="text/javascript" src="../../classes/PolygonFromSVG.js"></script>
 
   <!-- Javascript Programm in separater Datei -->
-  <script type="text/javascript" src="../script/clockwork2.js" id="homework"></script>
+  <script type="text/javascript" src="../script/clockwork2v2.js" id="homework"></script>
 
   <!-- Matter JS link-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
