--- a/watchface/watchface-binary-restaints.html
+++ b/watchface/watchface-binary-restaints.html
@@ -32,7 +32,7 @@
   <script type="text/javascript" src="./classes/PolygonFromSVG.js"></script>
 
   <!-- Javascript Programm in separater Datei -->
-  <script type="text/javascript" src="watchface.js" id="homework"></script>
+  <script type="text/javascript" src="watchface-binary-restaints.js" id="homework"></script>
 
   <style>
     body {
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
