--- a/tobi/pages/clockwork7.html
+++ b/tobi/pages/clockwork7.html
@@ -7,88 +7,37 @@
   <meta name="description" content="">
   <meta name="author" content="ByronStar">
 
-  <title>Magnetics</title>
+  <title>Clockwork 7</title>
 
   <!-- p5js -->
   <script src="../../libraries/p5.js" type="text/javascript"></script>
-  <script src="../../libraries/p5.sound.js" type="text/javascript"></script>
 
-  <!-- matter.js -->
-  <script type="text/javascript" src="../../libraries/decomp.min.js"></script>
-  <script type="text/javascript" src="../../libraries/pathseg.js"></script>
-  <script type="text/javascript" src="../../libraries/matter.js"></script>
-
-  <!-- Javascript Klassen -->
-  <script type="text/javascript" src="../../classes/Mouse.js"></script>
-  <script type="text/javascript" src="../../classes/BlockCore.js"></script>
-  <script type="text/javascript" src="../../classes/Block.js"></script>
-  <script type="text/javascript" src="../../classes/BlocksFromSVG.js"></script>
-  <script type="text/javascript" src="../../classes/Ball.js"></script>
-  <script type="text/javascript" src="../../classes/Magnet.js"></script>
-  <script type="text/javascript" src="../../classes/Parts.js"></script>
-  <script type="text/javascript" src="../../classes/Polygon.js"></script>
-  <script type="text/javascript" src="../../classes/PolygonFromPoints.js"></script>
-  <script type="text/javascript" src="../../classes/Stack.js"></script>
-  <script type="text/javascript" src="../../classes/PolygonFromSVG.js"></script>
-
-  <!-- Javascript Programm in separater Datei -->
-  <script type="text/javascript" src="../script/clockwork7.js" id="homework"></script>
-
-  <!-- Matter JS link-->
+  <!-- matter.js - NUR EINE VERSION -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
+  <!-- Javascript Programm -->
+  <script type="text/javascript" src="../script/clockwork7.js"></script>
 
   <style>
     body {
       padding: 0;
       margin: 0;
-      height: 100%;
+      height: 100vh;
       overflow: hidden;
-      background-color: gray;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    canvas,
     #thecanvas {
-      position: absolute;
-      top: 0;
-    }
-
-    .overlay {
       position: relative;
-      margin: 0 0 0 5px;
-    }
-
-    #sprite-background {
-      position: absolute;
-      width: 2560px;
-      height: 1600px;
-      background: url('./background.png') no-repeat;
-      z-index: -1;
-    }
-
-    #sprite-foreground {
-      position: absolute;
-      width: 2560px;
-      height: 1600px;
-      background: url('./foreground.png') no-repeat;
-      z-index: 1;
-      pointer-events: none;
     }
   </style>
-  <title>Clockwork 2</title>
-</head>
-
 </head>
 
 <body>
-  <!-- <div id="sprite-background"></div> -->
-  <div id="thecanvas">
-    <canvas id="canvas">
-  </div>
-  <div class="overlay">
-    <input id="color" style="display: none;" type="text" value="#00800080" data-coloris>
-  </div>
-  <!-- <div id="sprite-foreground"></div> -->
+  <div id="thecanvas"></div>
 </body>
 
 </html>
