--- a/tobi/pages/clockwork9.html
+++ b/tobi/pages/clockwork9.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Clockwork 8 - Abstract Watchface</title>
+  <title>Clockwork 9 - Blocks</title>
 
   <!-- p5.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
@@ -47,8 +47,8 @@
 
     .watch-frame {
       position: relative;
-      width: 396px;
-      height: 484px;
+      width: 960px;
+      height: 960px;
       background: black;
       border-radius: 90px;
       box-shadow: 0 0 20px rgba(255,255,255,0.1);
