--- a/watchface/binary-watchface-black.html
+++ b/watchface/binary-watchface-black.html
@@ -38,7 +38,7 @@
     body {
       padding: 0;
       margin: 0;
-      background-color:black;
+      background-color:lightgrey;
     }
 
     canvas,
