--- a/tobi/pages/clockwork10_clock.html
+++ b/tobi/pages/clockwork10_clock.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Clockwork 10 - Clock</title>
+  <title>Clockwork 10 - Digital Clock</title>
 
   <!-- p5.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
@@ -10,10 +10,8 @@
   <!-- matter.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
-  <!-- No additional classes needed for this watchface -->
-
-  <!-- Javascript Programm in separater Datei -->
-  <script type="text/javascript" src="../script/clockwork10_clock.js" id="homework"></script>
+  <!-- Digital Clock 7-Segment Display -->
+  <script type="text/javascript" src="../script/clockwork10_clock.js"></script>
 
   <style>
     body {
@@ -67,7 +65,6 @@
 </head>
 
 <body>
-  <div class="watch-frame">
     <div class="digital-crown"></div>
     <div class="side-button"></div>
     <div id="thecanvas"></div>
