--- a/tobi/pages/clockwork10_clock.html
+++ b/tobi/pages/clockwork10_clock.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Clockwork 10 - Digital Clock</title>
+  <title>Segment Storm</title>
 
   <!-- p5.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
