--- a/watchface/binary-watchface-black.html
+++ b/watchface/binary-watchface-black.html
@@ -38,7 +38,7 @@
     body {
       padding: 0;
       margin: 0;
-      background-color:lightgrey;
+      background-color:black;
     }
 
     canvas,
@@ -46,7 +46,7 @@
       position: absolute;
       top: 0;
       left:0;
-      background-color: lightgrey;
+      background-color: black;
     }
 
     .overlay {
