--- a/tobi/pages/segmentstorm.html
+++ b/tobi/pages/segmentstorm.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
   <!-- Digital Clock 7-Segment Display -->
-  <script type="text/javascript" src="../script/clockwork10_clock.js"></script>
+  <script type="text/javascript" src="../script/segmentstorm.js"></script>
 
   <style>
     body {
