--- a/watchface/binary-watchface-black.html
+++ b/watchface/binary-watchface-black.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="ByronStar">
 
-  <title>Watchface</title>
+  <title>Binary</title>
 
   <!-- p5js -->
   <script src="./libraries/p5.js" type="text/javascript"></script>
